--- a/app/assets/stylesheets/landing-video-slide.scss
+++ b/app/assets/stylesheets/landing-video-slide.scss
@@ -16,7 +16,7 @@ body {
   width: 100%;
   height: 100%;
   iframe {
-    width: 100%;
+    width: 100herok%;
     height: 100%;
     // position: relative;
     // top: 0;
